--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -32,5 +32,14 @@
             "console": "integratedTerminal",
             "outputCapture": []
         },
+        {
+            "type": "lua",
+            "request": "launch",
+            "name": "IntentDebugger",
+            "stopOnEntry": false,
+            "program": "${workspaceFolder}/intent_debug.lua",
+            "console": "integratedTerminal",
+            "outputCapture": []
+        },
     ]
 } 
